--- a/kamuchart/values.yaml
+++ b/kamuchart/values.yaml
@@ -59,10 +59,12 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -82,7 +84,8 @@ service:
 ingress:
   enabled: false
   className: "haproxy"
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -95,7 +98,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -149,4 +153,6 @@ tolerations: []
 
 affinity: {}
 
+# This section tells the chart that we will use a StatefulSet instead of a Deployment.
+# Only StatefulSets have volumeClaimTemplates.
 volumeClaimTemplates: {}
