--- a/kamuchart/values.yaml
+++ b/kamuchart/values.yaml
@@ -8,6 +8,15 @@ enabled: false
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicas: 1
 
+# Programming language for Datadog Single Step APM Instrumentation
+language: generic
+
+# Enable service monitoring
+monitoring:
+  # Enable datadog annotations
+  datadog:
+    enabled: false
+
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: nginx
