feat: add env field

--- a/kamuchart/templates/statefulset.yaml
+++ b/kamuchart/templates/statefulset.yaml
@@ -10,6 +10,7 @@ metadata:
     {{- include "kamuchart.datadogSelectorLabels" . | nindent 4 }}
     {{- end }}
 spec:
+  revisionHistoryLimit: 5
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicas }}
   {{- end }}
