--- a/kamuchart/templates/deployment.yaml
+++ b/kamuchart/templates/deployment.yaml
@@ -42,6 +42,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
+        {{- if not  (empty .Values.extraContainers) }}
+        {{- with .Values.extraContainers }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- end }}
         - name: {{ cat (include "kamuchart.name" .) "-container" | nospace | trimSuffix "-" }}
           {{- with .Values.securityContext }}
           securityContext:
