fix: disable ingress with application

--- a/kamuchart/templates/ingress.yaml
+++ b/kamuchart/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 {{- if .Values.ingress.enabled -}}
 
 {{- $serviceName := print (include "kamuchart.fullname" .) "-service" -}}
@@ -42,4 +43,5 @@ spec:
                   number: {{ $.Values.service.port }}
           {{- end }}
     {{- end }}
+{{- end }}
 {{- end }}
